create empty window

--- a/stageMaker/Makefile
+++ b/stageMaker/Makefile
@@ -1,20 +1,33 @@
 
 main    = debug/main.o
 maker   = debug/maker.o
+window  = debug/window.o
+camera  = debug/camera.o
+utility = debug/utility.o
+
 program = debug/program.out
-objs    = $(main) $(maker)
+objs    = $(main) $(maker) $(window) $(camera) $(utility)
 
 libs    = -lglfw -lGL -lftgl
 cmpopt  = -Wall -std=c++14
 
 $(program): $(objs)
-	g++ $^ -o $@
+	g++ $(cmpopt) $(libs) $^ -o $@
 
 $(main): src/main.cpp
 	g++ $(cmpopt) $(libs) -c $^ -o $@
 
 $(maker): src/maker/maker.cpp
-	g++ $(compopt) $(libs) -c $^ -o $@
+	g++ $(cmpopt) $(libs) -c $^ -o $@
+
+$(window): src/window/window.cpp
+	g++ $(cmpopt) $(libs) -c $^ -o $@
+
+$(camera): src/camera/camera.cpp
+	g++ $(cmpopt) $(libs) -c $^ -o $@
+
+$(utility): src/utility/utility.cpp
+	g++ $(cmpopt) $(libs) -c $^ -o $@
 
 run: $(program)
 	$^
