--- a/stageMaker/Makefile
+++ b/stageMaker/Makefile
@@ -3,10 +3,12 @@ main    = debug/main.o
 maker   = debug/maker.o
 window  = debug/window.o
 camera  = debug/camera.o
+mouse   = debug/mouse.o
+key     = debug/key.o
 utility = debug/utility.o
 
 program = debug/program.out
-objs    = $(main) $(maker) $(window) $(camera) $(utility)
+objs    = $(main) $(maker) $(window) $(camera) $(mouse) $(key) $(utility)
 
 libs    = -lglfw -lGL -lftgl
 cmpopt  = -Wall -std=c++14
@@ -24,6 +26,12 @@ $(window): src/window/window.cpp
 	g++ $(cmpopt) $(libs) -c $^ -o $@
 
 $(camera): src/camera/camera.cpp
+	g++ $(cmpopt) $(libs) -c $^ -o $@
+
+$(mouse): src/input/mouse.cpp
+	g++ $(cmpopt) $(libs) -c $^ -o $@
+
+$(key): src/input/key.cpp
 	g++ $(cmpopt) $(libs) -c $^ -o $@
 
 $(utility): src/utility/utility.cpp
