Makefile: change compile opt <lib/libAntTweakBar.a> to <-lAntTweakBar>

--- a/antTweekBar/Makefile
+++ b/antTweekBar/Makefile
@@ -1,9 +1,9 @@
 
 program: main.o
-	g++ -o program main.o -lglfw -lGL lib/libAntTweakBar.a -lX11
+	g++ -o program main.o -lglfw -lGL -lAntTweakBar -lX11
 
 main.o: main.cpp
-	g++ -std=c++11 -c -o main.o main.cpp -lglfw -lGL lib/libAntTweakBar.a -lX11
+	g++ -std=c++11 -c -o main.o main.cpp -lglfw -lGL -lAntTweakBar -lX11
 
 run: program
 	./program
