camera: impl twbar

--- a/stageMaker/Makefile
+++ b/stageMaker/Makefile
@@ -1,9 +1,10 @@
 
 main   = debug/main.o
 native = debug/native.o
+camera = debug/camera.o
 
 program = debug/program.out
-objs    = $(main) $(native)
+objs    = $(main) $(native) $(camera)
 
 libs = -lglfw -lGL -lAntTweakBar -lX11
 opt  = -Wall -std=c++14
@@ -15,6 +16,9 @@ $(main): src/main.cpp
 	g++ $(opt) $(libs) -c $^ -o $@
 
 $(native): src/appNative.cpp
+	g++ $(opt) $(libs) -c $^ -o $@
+
+$(camera): src/camera.cpp
 	g++ $(opt) $(libs) -c $^ -o $@
 
 run: $(program)
