--- a/stageMaker/Makefile
+++ b/stageMaker/Makefile
@@ -2,9 +2,10 @@
 main   = debug/main.o
 native = debug/native.o
 camera = debug/camera.o
+maker  = debug/maker.o
 
 program = debug/program.out
-objs    = $(main) $(native) $(camera)
+objs    = $(main) $(native) $(camera) $(maker)
 
 libs = -lglfw -lGL -lAntTweakBar -lX11
 opt  = -Wall -std=c++14
@@ -19,6 +20,9 @@ $(native): src/appNative.cpp
 	g++ $(opt) $(libs) -c $^ -o $@
 
 $(camera): src/camera.cpp
+	g++ $(opt) $(libs) -c $^ -o $@
+
+$(maker): src/maker.cpp
 	g++ $(opt) $(libs) -c $^ -o $@
 
 run: $(program)
